# risk-bot

./: Cargo.toml  README.md  build.sh  stub.py
attack_game/: Cargo.toml
attack_game/src/: evaluate.rs  game.rs  lib.rs  strategy.rs
attack_game/src/game/: mov.rs  wasm.rs
attack_game/src/strategy/: puct.rs  quantiles.txt  state.rs
json_connection/: Cargo.toml
json_connection/src/: connection.rs  lib.rs
mcts/: Cargo.toml
mcts/src/: lib.rs  uct.rs
puct_bot/: Cargo.toml
puct_bot/src/: lib.rs
risk_bots/: Cargo.toml
risk_bots/src/: complex.rs  lib.rs  simple.rs  strategy.rs  very_bad.rs  very_bad13.rs
risk_engine/: Cargo.toml
risk_engine/src/: censor.rs  game_engine.rs  lib.rs  player.rs  state.rs
risk_engine/src/state/: mutate.rs  record.rs
risk_helper/: Cargo.toml
risk_helper/src/: lib.rs  state.rs  util.rs
risk_helper/src/state/: mutate.rs
risk_shared/: Cargo.toml
risk_shared/src/: lib.rs  map.rs  player.rs  query.rs  record.rs  serde.rs
risk_shared/src/record/: mov.rs
sprt/: Cargo.toml
sprt/src/: lib.rs  main.rs  sprt.rs
spsa/: Cargo.toml
spsa/src/: lib.rs  main.rs  spsa.rs
