[package]
name = "risk_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-map = "2.7.3"
enumn = "0.1.13"
serde = { version = "1.0.204", optional = true, features = ["serde_derive"] }
serde_repr = { version = "0.1.19", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_repr"]
